<resources>
    <string name="app_name">ExpenseTrackingApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numOfRecordLabel">No. of Records</string>
    <string name="totalExpensesLabel">Total Expenses</string>
    <string name="numOfRecordsResultsLabel">0</string>
    <string name="totalExpensesResultsLabel">$0.00</string>
    <string name="expensesSumBtnLabel">Expenses Summary</string>
    <string name="addExpenseBtnLabel">Add Expense</string>
    <string name="expenseNameLabel">McDonalds</string>
    <string name="expenseAmountLabel">$11.25</string>
    <string name="expenseDateLabel">02/03/2022</string>
    <string name="expenseCatLabel">(Food)</string>

    <string name="addExpNameLabel">Name:</string>
    <string name="addExpAmtLabel">Amount:</string>
    <string name="addExpDateLabel">Date:</string>
    <string name="addExpACatLabel">Category:</string>
    <string name="addExpNameHint">Expense Name</string>
    <string name="addExpAmtHint">Expense amount</string>
    <string name="addExpDateResults">None</string>
    <string name="addExpCateResults">None</string>
    <string name="setExpDateBtn">Set Date</string>
    <string name="pickExpCateBtn">Pick Category</string>
    <string name="cancelBtn">Cancel</string>
    <string name="submitBtn">Submit</string>

    <string name="month">January</string>
    <string name="year">2022</string>
    <string name="amount">$0.00</string>



</resources>