<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpensesFragment"
    android:padding="10dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesSumBtn"
        tools:listitem="@layout/expense_lists_layout" />

    <TextView
        android:id="@+id/numRecordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/numOfRecordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numRecordTextViewResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/numOfRecordsResultsLabel"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/numRecordTextView"
        app:layout_constraintStart_toStartOf="@+id/numRecordTextView"
        app:layout_constraintTop_toBottomOf="@+id/numRecordTextView" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/totalExpensesLabel"
        app:layout_constraintBottom_toBottomOf="@+id/numRecordTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalExpenseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/totalExpensesResultsLabel"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/totalTextView"
        app:layout_constraintStart_toStartOf="@+id/totalTextView"
        app:layout_constraintTop_toBottomOf="@+id/totalTextView" />

    <Button
        android:id="@+id/expensesSumBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/expensesSumBtnLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numRecordTextViewResults" />

    <Button
        android:id="@+id/addExpenseBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addExpenseBtnLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expensesSumBtn"
        app:layout_constraintTop_toBottomOf="@+id/totalExpenseTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>